--- a/DoctorsOffice/Views/Patients/Index.cshtml
+++ b/DoctorsOffice/Views/Patients/Index.cshtml
@@ -19,4 +19,4 @@
 }
 
 <p>@Html.ActionLink("Add new patient", "Create")</p>
-<p>@Html.ActionLink("Home", "Index")</p>
+<p>@Html.ActionLink("Home", "Index", "Home")</p>
