--- a/DoctorsOffice/wwwroot/css/styles.css
+++ b/DoctorsOffice/wwwroot/css/styles.css
@@ -1,8 +1,64 @@
 body {
   background-color: rgb(253, 232, 138);
+  font-family: cursive;
 }
 
 .button-link{
   color: white;
   text-decoration: none;
+}
+
+a {
+  color: darkblue;
+}
+
+a:hover {
+  color: rgb(255, 0, 200);
+}
+
+p {
+  border: 2px solid white;
+  border-radius: 15px;
+  padding: .5em;
+  margin: 1em;
+  background-color: rgb(147, 165, 42);
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  text-align: center;
+  text-decoration: wavy;
+}
+
+li {
+  font-family: fantasy;
+  font-weight: bold;
+}
+
+h1 {
+  text-decoration: underline dotted;
+  text-align: center;
+  padding: 2em;
+  font-weight: bold;
+  color: blue;
+}
+
+h2 {
+  color: purple;
+  text-shadow: greenyellow;
+  text-decoration: green wavy underline;
+}
+
+li {
+  list-style-type: square;
+}
+
+.container {
+  background-color: rgb(255, 0, 221, .75);
+  border: dotted 8px rgb(106, 255, 47);
+  border-radius: 15px;
+  margin: 3em;
+  padding: 3em;
+}
+
+.no-patients {
+  color: lightpink;
+  font-size: larger;
 }
