--- a/DoctorsOffice/Views/Doctors/Delete.cshtml
+++ b/DoctorsOffice/Views/Doctors/Delete.cshtml
@@ -4,7 +4,8 @@
 
 @model DoctorsOffice.Models.Doctor
 
-Are you sure you want to delete @Model.FirstName @Model.LastName's records?
+<h1>Patient Tracker</h1>
+<h3>Are you sure you want to delete @Model.FirstName @Model.LastName's records?</h3>
 
 @using (Html.BeginForm())
 {
