--- a/DoctorsOffice/Views/Patients/Create.cshtml
+++ b/DoctorsOffice/Views/Patients/Create.cshtml
@@ -4,6 +4,7 @@
 
 @model DoctorsOffice.Models.Patient;
 
+<h1>Patient Tracker</h1>
 <h2>Create a new patient record</h2>
 
 @using (Html.BeginForm())
