--- a/DoctorsOffice/Views/Patients/Edit.cshtml
+++ b/DoctorsOffice/Views/Patients/Edit.cshtml
@@ -4,6 +4,8 @@
 
 @model DoctorsOffice.Models.Patient;
 
+<h1>Patient Tracker</h1>
+
 @using (Html.BeginForm())
 {
   @Html.HiddenFor(model => model.PatientId)
