--- a/DoctorsOffice/Views/Patients/Delete.cshtml
+++ b/DoctorsOffice/Views/Patients/Delete.cshtml
@@ -2,7 +2,9 @@
   Layout = "_Layout";
 }
 
-Are you sure you want to delete @Model.FirstName @Model.LastName's records?
+<h1>Patient Tracker</h1>
+
+<h3>Are you sure you want to delete @Model.FirstName @Model.LastName's records?</h3>
 
 @using (Html.BeginForm())
 {
